@@ -16,11 +16,14 @@ import io.restassured.response.Response;
 import io.stargate.sgv2.jsonapi.config.DocumentLimitsConfig;
 import io.stargate.sgv2.jsonapi.config.OperationsConfig;
 import io.stargate.sgv2.jsonapi.config.constants.DocumentConstants;
+import io.stargate.sgv2.jsonapi.exception.DocumentException;
+import io.stargate.sgv2.jsonapi.exception.RequestException;
 import io.stargate.sgv2.jsonapi.testresource.DseTestResource;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.regex.Pattern;
@@ -68,12 +71,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
           .body("$", responseIsWritePartialSuccess())
           .body("status.insertedIds", jsonEquals("[]"))
           .body("errors", hasSize(1))
-          .body("errors[0].errorCode", is("SHRED_BAD_DOCUMENT_TYPE"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_BAD_DOCUMENT_TYPE.name()))
           .body(
               "errors[0].message",
-              startsWith(
-                  "Bad document type to shred: document to shred must be a JSON Object, instead got NULL"));
+              containsString(
+                  "Bad document type to shred: document must be a JSON Object, instead got a JSON Null"));
     }
 
     @Test
@@ -317,9 +319,10 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                       """)
           .body("$", responseIsError())
           .body("errors", hasSize(1))
-          .body("errors[0].errorCode", is("COMMAND_ACCEPTS_NO_OPTIONS"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].message", startsWith("Command accepts no options: `InsertOneCommand`"));
+          .body("errors[0].errorCode", is(RequestException.Code.COMMAND_ACCEPTS_NO_OPTIONS.name()))
+          .body(
+              "errors[0].message",
+              startsWith("Command 'insertOne' does not accept options but some were included."));
     }
 
     @Test
@@ -351,8 +354,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                       """)
           .body("$", responseIsWritePartialSuccess())
           .body("status.insertedIds", jsonEquals("[]"))
-          .body("errors[0].message", is("Document already exists with the given _id"))
-          .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"));
+          .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
+          .body(
+              "errors[0].message",
+              startsWith(
+                  "Cannot insert the document: a document already exists with given '_id' ('duplicate')."));
 
       givenHeadersPostJsonThenOkNoErrors(
               """
@@ -399,12 +405,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                       }
                       """)
           .body("$", responseIsError())
-          .body("errors[0].errorCode", is("COMMAND_FIELD_INVALID"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
+          .body("errors[0].errorCode", is(RequestException.Code.COMMAND_FIELD_VALUE_INVALID.name()))
           .body(
               "errors[0].message",
               startsWith(
-                  "Request invalid: field 'command.document' value `null` not valid. Problem: must not be null"));
+                  "Command field 'command.document' value `null` not valid: must not be null"));
     }
   }
 
@@ -512,6 +517,7 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
               .response();
       Object insertedIdRaw = response.path("status.insertedIds[0]");
       assertThat(insertedIdRaw).isInstanceOf(Map.class);
+      @SuppressWarnings("unchecked")
       Map<String, Object> insertedId = (Map<String, Object>) insertedIdRaw;
       assertThat(insertedId).hasSize(1);
       assertThat(insertedId).containsKey("$objectId");
@@ -599,12 +605,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
       givenHeadersPostJsonThenOk("{ \"insertOne\": { \"document\": %s }}".formatted(doc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_BAD_DOCID_TYPE"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_BAD_DOCID_TYPE.name()))
           .body(
               "errors[0].message",
               containsString(
-                  "Bad type for '_id' property: Bad JSON Extension value: '$uuid' value has to be 36-character UUID String, instead got (42)"));
+                  "Bad JSON Extension value to shred: '$uuid' value has to be 36-character UUID String, instead got (42)"));
     }
 
     @Test
@@ -620,12 +625,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
       givenHeadersPostJsonThenOk("{ \"insertOne\": { \"document\": %s }}".formatted(doc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_BAD_DOCID_TYPE"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_BAD_DOCID_TYPE.name()))
           .body(
               "errors[0].message",
               containsString(
-                  "Bad JSON Extension value: '$objectId' value has to be 24-digit hexadecimal ObjectId, instead got (\"not-quite-objectid\")"));
+                  "Bad JSON Extension value to shred: '$objectId' value has to be 24-digit hexadecimal ObjectId, instead got (\"not-quite-objectid\")"));
     }
 
     @Test
@@ -641,11 +645,10 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
       givenHeadersPostJsonThenOk("{ \"insertOne\": { \"document\": %s }}".formatted(doc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_BAD_DOCID_TYPE"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_BAD_DOCID_TYPE.name()))
           .body(
               "errors[0].message",
-              startsWith("Bad type for '_id' property: unrecognized JSON extension type"));
+              containsString("Bad type for '_id' field: unrecognized JSON extension type"));
     }
   }
 
@@ -685,11 +688,10 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(doc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_LIMIT_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_DOC_LIMIT_VIOLATION.name()))
           .body(
               "errors[0].message",
-              is(
+              containsString(
                   "Document size limitation violated: number of elements an indexable Array (field 'arr') has ("
                       + ARRAY_LEN
                       + ") exceeds maximum allowed ("
@@ -731,11 +733,10 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(doc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_LIMIT_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_DOC_LIMIT_VIOLATION.name()))
           .body(
               "errors[0].message",
-              startsWith(
+              containsString(
                   "Document size limitation violated: field path length (1003) exceeds maximum allowed (1000)"));
     }
 
@@ -778,11 +779,10 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(tooLongNumStr))
           .body("$", responseIsError())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_LIMIT_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_DOC_LIMIT_VIOLATION.name()))
           .body(
               "errors[0].message",
-              startsWith(
+              containsString(
                   "Document size limitation violated: Number value length (110) exceeds the maximum allowed (100"));
     }
 
@@ -820,11 +820,10 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(tooLongString))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_LIMIT_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_DOC_LIMIT_VIOLATION.name()))
           .body(
               "errors[0].message",
-              startsWith(
+              containsString(
                   "Document size limitation violated: indexed String value (field 'bigString') length (8056 bytes) exceeds maximum allowed"));
     }
 
@@ -832,13 +831,13 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
       // Create random "words" of 7 characters each, and space
       StringBuilder sb = new StringBuilder(minLen + 8);
       do {
-        sb.append(RandomStringUtils.randomAlphanumeric(7)).append(' ');
+        sb.append(RandomStringUtils.insecure().nextAlphanumeric(7)).append(' ');
       } while (sb.length() < minLen);
       return sb.toString();
     }
 
     @Test
-    public void insertLongButNotTooLongDoc() throws Exception {
+    public void insertLongButNotTooLongDoc() {
       JsonNode bigDoc =
           createBigDoc("bigValidDoc", DocumentLimitsConfig.DEFAULT_MAX_DOCUMENT_SIZE - 20_000);
       _verifyInsert("bigValidDoc", bigDoc);
@@ -857,7 +856,7 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
     }
 
     @Test
-    public void tryInsertTooLongDoc() throws Exception {
+    public void tryInsertTooLongDoc() {
       JsonNode bigDoc =
           createBigDoc("bigValidDoc", DocumentLimitsConfig.DEFAULT_MAX_DOCUMENT_SIZE + 100_000);
 
@@ -872,11 +871,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(bigDoc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_LIMIT_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_DOC_LIMIT_VIOLATION.name()))
           .body(
-              "errors[0].message", startsWith("Document size limitation violated: document size ("))
-          .body("errors[0].message", endsWith(") exceeds maximum allowed (4000000)"));
+              "errors[0].message",
+              containsString("Document size limitation violated: document size ("))
+          .body("errors[0].message", containsString(") exceeds maximum allowed (4000000)"));
     }
 
     @Test
@@ -901,14 +900,13 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(tooManyPropsDoc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_LIMIT_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_DOC_LIMIT_VIOLATION.name()))
           .body(
               "errors[0].message",
-              startsWith("Document size limitation violated: number of properties"))
+              containsString("Document size limitation violated: number of properties"))
           .body(
               "errors[0].message",
-              endsWith(
+              containsString(
                   "indexable Object (field 'subdoc') has (1001) exceeds maximum allowed (1000)"));
     }
 
@@ -936,12 +934,12 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(tooManyPropsDoc))
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_LIMIT_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_DOC_LIMIT_VIOLATION.name()))
           .body(
               "errors[0].message",
-              startsWith("Document size limitation violated: total number of indexed properties ("))
-          .body("errors[0].message", endsWith(" in document exceeds maximum allowed (2000)"));
+              containsString(
+                  "Document size limitation violated: total number of indexed properties ("))
+          .body("errors[0].message", containsString(" in document exceeds maximum allowed (2000)"));
     }
 
     private void _verifyInsert(String docId, JsonNode doc) {
@@ -1163,8 +1161,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
           """)
           .body("$", responseIsWritePartialSuccess())
           .body("status.insertedIds", containsInAnyOrder("doc4", "doc5"))
-          .body("errors[0].message", startsWith("Failed to insert document with _id doc4"))
-          .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"));
+          .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
+          .body(
+              "errors[0].message",
+              startsWith(
+                  "Cannot insert the document: a document already exists with given '_id' ('doc4')"));
 
       verifyDocCount(2);
     }
@@ -1378,7 +1379,7 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
   @Order(9)
   class InsertManyFails {
     @Test
-    public void orderedFailOnDups() {
+    public void orderedFailOnDuplicates() {
       givenHeadersPostJsonThenOk(
               """
               {
@@ -1394,11 +1395,13 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
               }
               """)
           .body("$", responseIsWritePartialSuccess())
-          .body("status.insertedIds", is(Arrays.asList("doc4")))
+          .body("status.insertedIds", is(List.of("doc4")))
           .body("errors", hasSize(1))
-          .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].message", startsWith("Failed to insert document with _id doc4"));
+          .body("errors[0].errorCode", is(DocumentException.Code.DOCUMENT_ALREADY_EXISTS.name()))
+          .body(
+              "errors[0].message",
+              startsWith(
+                  "Cannot insert the document: a document already exists with given '_id' ('doc4')"));
 
       verifyDocCount(1);
     }
@@ -1421,9 +1424,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   """)
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].message", is("Document already exists with the given _id"))
+          .body("errors[0].errorCode", is(DocumentException.Code.DOCUMENT_ALREADY_EXISTS.name()))
+          .body(
+              "errors[0].message",
+              startsWith(
+                  "Cannot insert the document: a document already exists with given '_id' ('doc1')"))
           .body("insertedIds", is(nullValue()))
           .body("status.documentResponses", hasSize(3))
           .body("status.documentResponses[0]", is(Map.of("_id", "doc1", "status", "OK")))
@@ -1455,11 +1460,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                       """)
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_KEY_NAME_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_BAD_FIELD_NAME.name()))
           .body(
               "errors[0].message",
-              startsWith("Document field name invalid: field name '$username' starts with '$'"))
+              containsString(
+                  "Document field name not valid: field name '$username' starts with '$'"))
           .body("insertedIds", is(nullValue()))
           .body("status.documentResponses", hasSize(3))
           .body("status.documentResponses[0]", is(Map.of("_id", "doc1", "status", "OK")))
@@ -1500,18 +1505,22 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
           // Document to insert may fail as duplicate if it was executed after another
           // document in the list with that id
           .body("errors", hasSize(4))
-          .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].message", startsWith("Failed to insert document with _id"))
-          .body("errors[1].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
-          .body("errors[1].exceptionClass", is("JsonApiException"))
-          .body("errors[1].message", startsWith("Failed to insert document with _id"))
-          .body("errors[2].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
-          .body("errors[2].exceptionClass", is("JsonApiException"))
-          .body("errors[2].message", startsWith("Failed to insert document with _id"))
-          .body("errors[3].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
-          .body("errors[3].exceptionClass", is("JsonApiException"))
-          .body("errors[3].message", startsWith("Failed to insert document with _id"));
+          .body("errors[0].errorCode", is(DocumentException.Code.DOCUMENT_ALREADY_EXISTS.name()))
+          .body(
+              "errors[0].message",
+              startsWith("Cannot insert the document: a document already exists with given '_id'"))
+          .body("errors[1].errorCode", is(DocumentException.Code.DOCUMENT_ALREADY_EXISTS.name()))
+          .body(
+              "errors[1].message",
+              startsWith("Cannot insert the document: a document already exists with given '_id'"))
+          .body("errors[2].errorCode", is(DocumentException.Code.DOCUMENT_ALREADY_EXISTS.name()))
+          .body(
+              "errors[2].message",
+              startsWith("Cannot insert the document: a document already exists with given '_id'"))
+          .body("errors[3].errorCode", is(DocumentException.Code.DOCUMENT_ALREADY_EXISTS.name()))
+          .body(
+              "errors[3].message",
+              startsWith("Cannot insert the document: a document already exists with given '_id'"));
 
       verifyDocCount(2);
     }
@@ -1537,11 +1546,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   """)
           .body("$", responseIsWritePartialSuccess())
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].errorCode", is("SHRED_DOC_KEY_NAME_VIOLATION"))
+          .body("errors[0].errorCode", is(DocumentException.Code.SHRED_BAD_FIELD_NAME.name()))
           .body(
               "errors[0].message",
-              startsWith("Document field name invalid: field name '$username' starts with '$'"))
+              containsString(
+                  "Document field name not valid: field name '$username' starts with '$'"))
           .body("insertedIds", is(nullValue()))
           .body("status.documentResponses", hasSize(3))
           .body("status.documentResponses[0]", is(Map.of("_id", "doc1", "status", "OK")))
@@ -1576,7 +1585,6 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
           .body("$", responseIsError())
           .body("status.insertedIds", is(nullValue()))
           .body("errors", hasSize(1))
-          .body("errors[0].exceptionClass", is("SchemaException"))
           .body(
               "errors[0].message",
               containsString(
@@ -1613,12 +1621,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                   .formatted(docs.toString()))
           .body("$", responseIsError())
           .body("errors", hasSize(1))
-          .body("errors[0].errorCode", is("COMMAND_FIELD_INVALID"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
+          .body("errors[0].errorCode", is("COMMAND_FIELD_VALUE_INVALID"))
           .body(
               "errors[0].message",
-              endsWith(
-                  "not valid. Problem: amount of documents to insert is over the max limit ("
+              containsString(
+                  "not valid: amount of documents to insert is over the max limit ("
                       + docs.size()
                       + " vs "
                       + MAX_DOCS
@@ -1632,13 +1639,13 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
   class Metrics {
     @Test
     public void checkInsertOneMetrics() {
-      InsertInCollectionIntegrationTest.super.checkMetrics("InsertOneCommand");
-      InsertInCollectionIntegrationTest.super.checkDriverMetricsTenantId();
+      checkMetrics("InsertOneCommand");
+      checkDriverMetricsTenantId();
     }
 
     @Test
     public void checkInsertManyMetrics() {
-      InsertInCollectionIntegrationTest.super.checkMetrics("InsertManyCommand");
+      checkMetrics("InsertManyCommand");
     }
   }
 
